Bug 933556 - Anchor fixed, left+right/top+bottom positioned content to center. r=roc

If a fixed position element has both top and bottom, or both left and right
positioning, set the fixed position anchor to the center of the corresponding
axis. This causes it to remain center-aligned when async zooming.